--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,10 @@
-deploy.ant.properties.file=C:\\Users\\mrmas\\AppData\\Roaming\\NetBeans\\8.0.1\\config\\GlassFishEE6\\Properties\\gfv3-888652623.properties
+deploy.ant.properties.file=C:\\Users\\PC\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3829779700.properties
+file.reference.gson-2.8.2.jar=D:\\Datos\\Restmicrocreditos\\gson-2.8.2.jar
+file.reference.mysql-connector-java-5.1.15-bin.jar=D:\\Datos\\Restmicrocreditos\\mysql-connector-java-5.1.15-bin.jar
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/mrmas/AppData/Roaming/NetBeans/8.0.1/config/GF_4.1/domain1
-j2ee.server.home=C:/Program Files/glassfish-4.1/glassfish
-j2ee.server.instance=[C:\\Program Files\\glassfish-4.1\\glassfish;C:\\Program Files\\glassfish-4.1\\glassfish\\domains\\domain1]deployer:gfv3ee6:localhost:4848
-j2ee.server.middleware=C:/Program Files/glassfish-4.1
+j2ee.server.domain=C:/Users/PC/AppData/Roaming/NetBeans/8.2/config/GF_4.1.1/domain1
+j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
+j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Program Files\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
 test.client.project=D:\\Documentos\\NetBeansProjects\\Restmicrocreditos
-user.properties.file=C:\\Users\\mrmas\\AppData\\Roaming\\NetBeans\\8.0.1\\build.properties
+user.properties.file=C:\\Users\\PC\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
